--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .navbar{
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 50px;
     z-index: 11;
@@ -21,4 +21,98 @@
 .nav{
     display: flex;
     gap: 15px;
+}
+
+.mobileLinks{
+    display: none;
+}
+
+.menuToggle{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: none;
+    width: 50px;
+    height: 10px;
+    cursor: pointer;
+  
+    flex-direction: column;
+    justify-content: space-around;
+    
+}
+
+.menuToggle span{
+    /* position: absolute; */
+    /* width: 100%; */
+    height: 1px;
+    background-color: black;
+}
+
+.openOne{
+    width: 100%;
+}  
+
+.openTwo{
+    width: 70%;
+    align-self: flex-end;
+}   
+
+
+
+.closeOne{
+    
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%) rotate(45deg) ;
+    width: 20px;
+
+}   
+
+.closeTwo{
+   
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%) rotate(-45deg) ;
+    width: 20px;
+}
+
+
+
+@media (max-width: 768px){
+    .nav{
+        display: none;
+    }
+
+    .menuToggle{
+        display: flex;
+        
+    }
+
+    .mobileLinks {
+        position: fixed;
+        top: 0;
+        right: -50%;
+        width: 50%;
+        height: 100%;
+        background: white;
+        border-left: 1px solid black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        transition: .5s;
+        will-change: transform;
+    }
+
+    .active {
+        transform: translateX(-100%);
+    }
+
+    .menuButton{
+        display: block;
+        cursor: pointer;
+    }
 }
