--- a/src/app/rsvp/page.module.css
+++ b/src/app/rsvp/page.module.css
@@ -53,6 +53,14 @@
     opacity: .5;
 }
 
+.display{
+    display: block;
+}
+
+.noDisplay{
+    display: none;
+}
+
 @media only screen and (max-width: 600px) {
     .title{
       
