--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'inter' ;
+  font-family: 'inter', sans-serif;
   font-weight: 400;
   letter-spacing: -0.07rem;
   text-decoration: none;
