--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     min-height: 100svh;
+    margin: 0 0 50px 0;
     display: flex;
     justify-content: center;
 
