--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -30,7 +30,7 @@
 .menuToggle{
     position: absolute;
     top: 1rem;
-    right: 1rem;
+    right: 5vw;
     display: none;
     width: 50px;
     height: 10px;
@@ -42,10 +42,8 @@
 }
 
 .menuToggle span{
-    /* position: absolute; */
-    /* width: 100%; */
     height: 1px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 .openOne{
@@ -56,8 +54,6 @@
     width: 70%;
     align-self: flex-end;
 }   
-
-
 
 .closeOne{
     
