--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -26,7 +26,7 @@
     grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: min-content;
     gap: 5px;
-    padding: 40vh 0;
+    padding: 30vh 0;
 
 }
 
@@ -41,6 +41,25 @@
     grid-column: span 12;
     font-size: 2rem;
     text-align: center;
+}
+
+.linkCta{
+    grid-column: span 12;
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    
+}
+
+.rsvpButton{
+    border: 1px solid rgba(0, 0, 0, 0.677);
+    padding: .5rem 1rem;
+    transition: .5s;
+}
+
+.rsvpButton:hover{
+  opacity: .5;
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -68,8 +87,6 @@
         object-fit: cover;
         width: 100%;
        
-        top: 40%;
-     
-    
+        top: 40%;    
     }
 }
