--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -55,6 +55,7 @@
     border: 1px solid rgba(0, 0, 0, 0.677);
     padding: .5rem 1rem;
     transition: .5s;
+    background-color: white;
 }
 
 .rsvpButton:hover{
